--- a/readme.mkd
+++ b/readme.mkd
@@ -10,4 +10,9 @@ At 0.4mJ / minute, fewer than 250 joules per year are used.
 
 Depending upon battery chemistry, temperature, age, etc, a single AAA battery provides 1000 to 5000 joules, for a total of 2000 to 10000 joules per pair, offering an operational battery life conservatively in excess of five years.
 
-Fast facts.
+Fast facts:
+
+* RF output power: ~5mw
+* Transmitter duty cycle: <0.5%
+* Samples per Minute: 2
+* Estimated battery life: 5-15 years
